Roundcube Webmail CopyMessage
=============================

2012 04 14
==========
 * Update for Roundcube framework
 
2012 01 21
==========
 * Add inital support for Larry

2011 01 18
==========
 * Add required plugin code (r4424)

2010 03 20
==========
 * Copy function in core after r3385

2010 02 21
==========
 * Update after r3258
 * Better action name

2010 01 03
==========
 * Add de_*

2009 12 19
==========
 * First version