@@ -1,10 +1,14 @@
 Roundcube Webmail CopyMessage
 =============================
 
+2012 04 16
+==========
+ * rcube_ui > rcube_utils (r6091)
+
 2012 04 14
 ==========
  * Update for Roundcube framework
- 
+
 2012 01 21
 ==========
  * Add inital support for Larry
